--- a/cifar/Makefile
+++ b/cifar/Makefile
@@ -5,9 +5,9 @@ VERSION ?= latest
 
 DOCKER=nvidia-docker
 
-PORTS = -p 8888:8888
-	VOLUMES = -v `pwd`:/root/workspace
-	ENV = -e KERAS_BACKEND=tensorflow
+VOLUMES = -v `pwd`:/root/workspace \
+	-v ${HOME}/Datasets:/root/workspace/data
+ENV = -e KERAS_BACKEND=tensorflow
 
 
 .PHONY: bash
