Update expr results

--- a/experiments/cifar/Makefile
+++ b/experiments/cifar/Makefile
@@ -5,6 +5,7 @@ VERSION ?= latest
 
 DOCKER=nvidia-docker
 
+PORTS = -p 0.0.0.0:8888:888
 VOLUMES = -v `pwd`:/root/workspace \
 	-v ${HOME}/Datasets:/root/.keras/datasets
 ENV = -e KERAS_BACKEND=tensorflow
@@ -13,4 +14,7 @@ ENV = -e KERAS_BACKEND=tensorflow
 .PHONY: bash
 
 bash:
-	$(DOCKER) run --rm -it $(PORTS) $(VOLUMES) $(ENV) $(NS)/$(REPO):$(VERSION) bash
+	$(DOCKER) run --rm -it $(VOLUMES) $(ENV) $(NS)/$(REPO):$(VERSION) bash
+
+notebook:
+	$(DOCKER) run --rm -it $(PORTS) $(VOLUMES) $(ENV) $(NS)/$(REPO):$(VERSION)
